[gd_scene load_steps=10 format=3 uid="uid://buk4hi5whq5mp"]

[ext_resource type="Script" path="res://puppet/puppet_main.gd" id="1_05bsq"]
[ext_resource type="Texture2D" uid="uid://cpaftfv0v0kea" path="res://balloon_kid.png" id="3_7tmck"]
[ext_resource type="Script" path="res://puppet/puppet_sprite.gd" id="3_nox5t"]
[ext_resource type="Script" path="res://puppet/puppet_ui.gd" id="4_e711u"]

[sub_resource type="Shader" id="Shader_jucgx"]
code = "shader_type canvas_item;
uniform vec4 color_input;

void vertex() {
	COLOR = color_input;
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the material.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gss2d"]
shader = SubResource("Shader_jucgx")
shader_parameter/color_input = Vector4(0.2, 0.2, 0.2, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_icygr"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:scale")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:puppet_sprite")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:possessor")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:flip")
properties/4/spawn = true
properties/4/replication_mode = 2

[sub_resource type="LabelSettings" id="LabelSettings_d2ifi"]
font_size = 61

[sub_resource type="LabelSettings" id="LabelSettings_h1bq3"]
font_size = 61

[node name="puppet" type="Node2D"]
script = ExtResource("1_05bsq")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_gss2d")
texture = ExtResource("3_7tmck")
script = ExtResource("3_nox5t")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
unique_name_in_owner = true

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 313.0
offset_bottom = 246.0
script = ExtResource("4_e711u")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpriteURL" type="TextEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Input Sprite URL"
context_menu_enabled = false
wrap_mode = 1

[node name="Update" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Submit"

[node name="Size_Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Size"

[node name="Size_Slider" type="HSlider" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.01
value = 0.1

[node name="Send_To_origin" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Send to origin"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_icygr")

[node name="Possessor" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 204.0
offset_top = -15.0
offset_right = 487.0
offset_bottom = 69.0
text = "aaaaaaaa"
label_settings = SubResource("LabelSettings_d2ifi")

[node name="Focused" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 205.0
offset_top = 36.0
offset_right = 252.0
offset_bottom = 59.0
text = "aaaaa"
label_settings = SubResource("LabelSettings_h1bq3")

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="pressed" from="Panel/VBoxContainer/Update" to="Panel" method="_on_update_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Size_Slider" to="Panel" method="_on_size_slider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Send_To_origin" to="." method="_on_send_to_origin_pressed"]
